# airdata

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  keywords.txt  library.properties
examples/: airdata_example.cc
examples/arduino/airdata_example/: airdata_example.ino
examples/cmake/: airdata_example.cc
include/airdata/: airdata.h  bfs_interface.h  constants.h
src/: airdata.cpp  airdata.h  airdata_constants.h
src/airdata/: airdata.cc
tests/: airdata_test.cc
